--- a/Pages/Content-3D-Heron.css
+++ b/Pages/Content-3D-Heron.css
@@ -67,7 +67,7 @@ body {
 {
     margin-right: 4vw;
     margin-left: 5vw;
-    width: 40vw;
+    width: 50vw;
     height: 50vh;
 }
 
@@ -82,9 +82,9 @@ body {
 .MainText {
     display: block;
     color: #f5deb3;
-    font-family: "Gruppo", sans-serif;
-    font-size: 1.5vw;
-    width: 23vw;
+    font-family: "Orbitron", sans-serif;
+    font-size: 1vw;
+    width: 32vw;
     margin-left: 0.1vw;
     
 }
@@ -116,7 +116,7 @@ body {
     
 }
 
-.MoreContentImage{
+.MoreContentImage1{
     margin: 2.5%;
     width: 50%;
     height: 35%;
@@ -124,15 +124,24 @@ body {
     border-radius: 2vh;
 }
 
+.MoreContentImage2{
+    margin: 2.5%;
+    width: 45%;
+    height: 50%;
+    border: 0.5vh solid #f5deb3; 
+    border-radius: 2vh;
+}
+
+
 .MoreContentText{
     
     display: block;
     color: #f5deb3;
-    font-family: "Gruppo", sans-serif;
-    font-size: 1vw;
+    font-family: "Orbitron", sans-serif;
+    font-size: 0.7vw;
     width: 30vw;
     height: 50vh;
-    margin-top: 2vh;
+    margin-top: 4vh;
     margin-left: 2vw;
     margin-right: 0.1vw;
 }
